@@ -36,7 +36,7 @@ $pconfig['enable'] = isset($config['dnsmasq']['enable']);
 $pconfig['regdhcp'] = isset($config['dnsmasq']['regdhcp']);
 $pconfig['allservers'] = isset($config['dnsmasq']['allservers']);
 $pconfig['strictorder'] = isset($config['dnsmasq']['strictorder']);
-$pconfig['disablestoprebind'] = isset($config['dnsmasq']['disablestoprebind']);
+$pconfig['stoprebind'] = isset($config['dnsmasq']['stoprebind']);
 
 if (!is_array($config['dnsmasq']['hosts'])) {
 	$config['dnsmasq']['hosts'] = array();
@@ -57,7 +57,7 @@ if ($_POST) {
 	$config['dnsmasq']['regdhcp'] = ($_POST['regdhcp']) ? true : false;
 	$config['dnsmasq']['allservers'] = ($_POST['allservers']) ? true : false;
 	$config['dnsmasq']['strictorder'] = ($_POST['strictorder']) ? true : false;
-	$config['dnsmasq']['disablestoprebind'] = ($_POST['disablestoprebind']) ? true : false;
+	$config['dnsmasq']['stoprebind'] = ($_POST['stoprebind']) ? true : false;
 
 	write_config();
 	
@@ -125,11 +125,12 @@ if ($_GET['act'] == "del") {
 					  this flag forces it to try each query with each server strictly in order.</td>
                 </tr>
 				<td class="vtable">
-                      <input name="disablestoprebind" type="checkbox" id="disablestoprebind" value="yes" <?php if ($pconfig['disablestoprebind']) echo "checked";?>>
-                      <strong>Disable Stop Rebind</strong><br>
-					  By default, the DNS forwarder will reject (and log) addresses from upstream nameservers 
+                      <input name="stoprebind" type="checkbox" id="stoprebind" value="yes" <?php if ($pconfig['stoprebind']) echo "checked";?>>
+                      <strong>Block DNS Rebind attacks</strong><br>
+					  If this option is iset, the DNS forwarder will reject (and log) addresses from upstream nameservers 
 					  which are in the private IP ranges. 
-					  This blocks an attack where a browser behind a firewall is used to probe machines on the local network. </td>
+					  This blocks an attack where a browser behind a firewall is used to probe machines on the local network. 
+					  If you use domain overrides, this may cause responses to be blocked if they are resolve to private IP ranges.</td>
                 </tr>
                 <tr> 
                   <td class="vtable">
